--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ compiler:
 #  - clang
 # Make sure CMake is installed
 install:
- - sudo apt-get update >/dev/null
- - sudo apt-get -q install libprotoc-dev libprotobuf7 libprotobuf-dev libosmpbf-dev libbz2-dev libstxxl-dev libstxxl1 libxml2-dev libzip-dev libboost1.46-all-dev lua5.1 liblua5.1-0-dev libluabind-dev rubygems
- - curl -s https://gist.githubusercontent.com/DennisOSRM/803a64a9178ec375069f/raw/ | sudo bash
  - sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
- - sudo apt-get update
- - sudo apt-get  -q install g++-4.7
+ - sudo add-apt-repository -y ppa:irie/boost
+ - sudo apt-get update >/dev/null
+ - sudo apt-get -q install libprotoc-dev libprotobuf7 libprotobuf-dev libosmpbf-dev libbz2-dev libstxxl-dev libstxxl1 libxml2-dev libzip-dev libboost-dev lua5.1 liblua5.1-0-dev libluabind-dev rubygems
+ - curl -s https://gist.githubusercontent.com/DennisOSRM/803a64a9178ec375069f/raw/ | sudo bash
+ - sudo apt-get -q install g++-4.7
 before_script:
  - rvm use 1.9.3
  - gem install bundler
