--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
  - sudo apt-get -q install libprotoc-dev libprotobuf7 libprotobuf-dev libosmpbf-dev libbz2-dev libstxxl-dev libstxxl1 libxml2-dev libzip-dev libboost1.49-dev lua5.1 liblua5.1-0-dev libluabind-dev rubygems
  - curl -s https://gist.githubusercontent.com/DennisOSRM/803a64a9178ec375069f/raw/ | sudo bash
  - sudo apt-get -q install g++-4.7
- - sudo apt-get -q install libboost-chrono1.49-dev libboost-date-time1.49-dev libboost-filesystem1.49-dev libboost-graph-parallel1.49-dev libboost-graph1.49-dev libboost-iostreams1.49-dev libboost-locale1.49-dev libboost-math1.49-dev libboost-mpi1.49-dev libboost-program-options1.49-dev libboost-random1.49-dev libboost-regex1.49-dev libboost-serialization1.49-dev libboost-signals1.49-dev libboost-system1.49-dev libboost-test1.49-dev libboost-thread1.49-dev libboost-timer1.49-dev libboost-wave1.49-dev
+ - sudo apt-get -q install libboost-chrono1.49-dev libboost-date-time1.49-dev libboost-filesystem1.49-dev libboost-iostreams1.49-dev libboost-locale1.49-dev libboost-math1.49-dev libboost-program-options1.49-dev libboost-random1.49-dev libboost-regex1.49-dev libboost-serialization1.49-dev libboost-signals1.49-dev libboost-system1.49-dev libboost-test1.49-dev libboost-thread1.49-dev libboost-timer1.49-dev libboost-wave1.49-dev
 before_script:
  - rvm use 1.9.3
  - gem install bundler
@@ -18,6 +18,7 @@ before_script:
  - mkdir build
  - cd build
  - cmake .. $CMAKEOPTIONS
+ - curl https://gist.githubusercontent.com/DennisOSRM/35b1780f6e3f8f1e3143/raw/f8695c9f352850557838fa5f5f5a03b3812fdb22/boost.diff|patch -p
 script:
  - make -j 2
  - cd ..
