--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,11 @@ compiler:
 # Make sure CMake is installed
 install:
  - sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
- - sudo add-apt-repository -y ppa:irie/boost
+ - sudo -y add-apt-repository ppa:boost-latest/ppa
  - sudo apt-get update >/dev/null
  - sudo apt-get -q install libprotoc-dev libprotobuf7 libprotobuf-dev libosmpbf-dev libbz2-dev libstxxl-dev libstxxl1 libxml2-dev libzip-dev libboost1.49-dev lua5.1 liblua5.1-0-dev libluabind-dev rubygems
- - curl -s https://gist.githubusercontent.com/DennisOSRM/803a64a9178ec375069f/raw/ | sudo bash
  - sudo apt-get -q install g++-4.7
- - sudo apt-get -q install libboost-chrono1.49-dev libboost-date-time1.49-dev libboost-filesystem1.49-dev libboost-iostreams1.49-dev libboost-locale1.49-dev libboost-math1.49-dev libboost-program-options1.49-dev libboost-random1.49-dev libboost-regex1.49-dev libboost-serialization1.49-dev libboost-signals1.49-dev libboost-system1.49-dev libboost-test1.49-dev libboost-thread1.49-dev libboost-timer1.49-dev libboost-wave1.49-dev
+ - sudo apt-get install libboost1.54-all-dev
 before_script:
  - rvm use 1.9.3
  - gem install bundler
