--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 # Make sure CMake is installed
 install:
  - sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
- - sudo -y add-apt-repository ppa:boost-latest/ppa
+ - sudo add-apt-repository -y ppa:boost-latest/ppa
  - sudo apt-get update >/dev/null
  - sudo apt-get -q install libprotoc-dev libprotobuf7 libprotobuf-dev libosmpbf-dev libbz2-dev libstxxl-dev libstxxl1 libxml2-dev libzip-dev libboost1.49-dev lua5.1 liblua5.1-0-dev libluabind-dev rubygems
  - sudo apt-get -q install g++-4.7
